Pridanie metody refresh do zobraz formov, uprava validacii, dokoncenie Kulturne podujatie model, implementacia dvojkliku vo kulturne podujatie, pamiatka , viacDnovy vylet a turistika formoch

--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/PridatPodrobnostiKultPodForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/PridatPodrobnostiKultPodForm.form
@@ -182,7 +182,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="formatCasLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="(hh:mm:ss)"/>
+        <Property name="text" type="java.lang.String" value="(hh:mm)"/>
       </Properties>
     </Component>
   </SubComponents>
