--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/TuristikaForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/TuristikaForm.form
@@ -89,12 +89,8 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="turyTable">
           <Properties>
-            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="3" rowCount="10">
-                <Column editable="true" title="Krajina" type="java.lang.Object"/>
-                <Column editable="true" title="Cie&#x13e;" type="java.lang.Object"/>
-                <Column editable="true" title="D&#xe1;tum" type="java.lang.Object"/>
-              </Table>
+            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="this.model" type="code"/>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
