--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/ViacdnovyVyletForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/ViacdnovyVyletForm.form
@@ -86,13 +86,8 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="vyletyTable">
           <Properties>
-            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="10">
-                <Column editable="true" title="Krajina" type="java.lang.Object"/>
-                <Column editable="true" title="Mesto" type="java.lang.Object"/>
-                <Column editable="true" title="Odchod" type="java.lang.Object"/>
-                <Column editable="true" title="Pr&#xed;chod" type="java.lang.Object"/>
-              </Table>
+            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="this.model" type="code"/>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
